--- a/public/index.html
+++ b/public/index.html
@@ -766,7 +766,7 @@
                         <td>${template.id}</td>
                         <td>${template.name}</td>
                         <td>${template.position}</td>
-                        <td>${template.avatar || 'N/A'}</td>
+                        <td>${template.avatar ? String.fromCodePoint(parseInt(template.avatar, 16)) : 'N/A'}</td>
                         <td>${new Date(template.created_at).toLocaleDateString()}</td>
                         <td>
                             <button class="btn btn-small btn-danger" onclick="deleteTemplate(${template.id})">
